# robot_rci

./: .gitignore  BUIL_AND_RUN.md  README.md  robot_rci.urdf.xacro
scripts/: Robot_RCI.desktop  install_desktop_shortcut.sh  start_robot_rci.sh
src/robot_rci_control/: package.xml  setup.cfg  setup.py
src/robot_rci_control/launch/: control.launch.py  trajectory.launch.py
src/robot_rci_control/robot_rci_control/: mgd_node.py  mgi_node.py  trajectory_node.py  validation_node.py  workspace_publisher.py
src/robot_rci_description/: CMakeLists.txt  package.xml
src/robot_rci_description/config/: rviz_config.rviz
src/robot_rci_description/launch/: display.launch.py  gazebo.launch.py  robot_complete.launch.py
src/robot_rci_description/urdf/: robot_rci.urdf.xacro
src/robot_rci_gui/: package.xml  setup.cfg  setup.py
src/robot_rci_gui/robot_rci_gui/: control_panel.py
